css sur le formulaire d'envoie de changement de mdp

--- a/resetPassword.html
+++ b/resetPassword.html
@@ -4,17 +4,25 @@
 <head>
   <title>Login In</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="resetPassword.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-
-<form action="resetPassword.php" method="post">
-    <h2>Recevoir un email de confirmation</h2>
-    <label for="email">Entrez votre email :</label>
-    <input type="email" id="email" name="email" required placeholder="Votre email">
-    <br><br>
-    <input type="submit" value="reset password">
-</form>
+  <div class="login">
+    <form action="resetPassword.php" method="post">
+      <h2 class="titre"><i class='bx bxs-envelope'></i>&nbsp;Recevoir un email de confirmation&nbsp;<i
+          class='bx bxs-envelope'></i></h2>
+      <label for="email">Entrez votre email :</label>
+      <div class="email">
+        <input type="email" id="email" name="email" required placeholder="Votre email">
+      </div>
+      <br><br>
+      <div class="envoyer">
+        <input type="submit" value="reset password">
+      </div>
+    </form>
+  </div>
 </body>
+
 </html>
